--- a/task1/index.html
+++ b/task1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JS-Start. 1 задача</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
 <p>Посмотри в консоль, там что-то важное</p>
