fixed button HOME

--- a/task1/index.html
+++ b/task1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p>Посмотри в консоль, там что-то важное</p>
-<a class="home" href="/index.html">На главную</a>
+<a class="home" href="../index.html">На главную</a>
 </body>
 <script src="script.js"></script>
 </html>
