--- a/task2/index.html
+++ b/task2/index.html
@@ -20,7 +20,7 @@
       prompt('Текст, выводимый во всплывающем окне при запросе ввода данных');
     </code>
   </div>
-<a class="home" href="/index.html">На главную</a>
+<a class="home" href="../index.html">На главную</a>
 <script src="script.js"></script>
 </body>
 </html>
