--- a/task3/index.html
+++ b/task3/index.html
@@ -11,7 +11,7 @@
     <div id="trafficLightYellow"></div>
     <div id="trafficLightRed"></div>
 </div>
-<a class="home" href="/index.html">На главную</a>
+<a class="home" href="../index.html">На главную</a>
 <script src="script.js"></script>
 </body>
 </html>
