--- a/task4/index.html
+++ b/task4/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <a href="https://www.google.ru/">Измените текст ссылки</a>
-<a class="home" href="/index.html">На главную</a>
+<a class="home" href="../index.html">На главную</a>
 <script src="script.js"></script>
 </body>
 </html>
