--- a/task5/index.html
+++ b/task5/index.html
@@ -22,7 +22,7 @@
         <p id="duplicateField"></p>
     </div>
 
-<a class="home" href="/index.html">На главную</a>
+<a class="home" href="../index.html">На главную</a>
 <script src="script.js"></script>
 </body>
 </html>
